on a enlever le bug du overflow

--- a/css/header.css
+++ b/css/header.css
@@ -21,9 +21,16 @@ html, body {
     height: 100%;
 }
 
+.row  {
+ margin-left: 0px;
+    
+    margin-right: 0px;
+}
 
 .container-fluid {
     padding-left: 0px;
+    
+    padding-right: 0px;
     min-height: 100%;
     position: relative;
 }
